--- a/config_sample.env
+++ b/config_sample.env
@@ -8,7 +8,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = ""
-TELEGRAM_API =
+TELEGRAM_API =1
 TELEGRAM_HASH = ""
 # OPTIONAL CONFIG
 DATABASE_URL = ""
